# tradebot

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Makefile
src/: config.rs  db.rs  lib.rs  main.rs  web.rs
src/exchange/: deserializer.rs  mod.rs
src/exchange/bitfinex/: api.rs  deserializer.rs  lending.rs  mod.rs
src/exchange/cex/: mod.rs
src/strategy/: lending.rs  mod.rs
www/: index.html
