[package]
name = "tradebot"
version = "0.1.0"
authors = ["chii"]
edition = "2021"

[[bin]]
name = "tradebot"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "3.0.7", features = ["derive"] }
config = "0.11"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
hmac = { version = "0.12", features = ["std"] }
log = "0.4.0"
env_logger = "0.9.0"
futures = "0.3"
mime_guess = "2"
r2d2 = "0.8"
r2d2_sqlite = "0.18.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
rust-embed="5.9.0"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha2 = "0.10"
rusqlite = { version = "0.25", features = ["array", "bundled", "chrono"] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
warp = "0.3"

[dev-dependencies]
serde_test = "1.0"
